<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IC_act">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/uppernav" />

            <ImageButton
                android:id="@+id/backbtn"
                android:layout_width="74dp"
                android:layout_height="50dp"
                android:background="#091C46"
                android:src="@drawable/backbtn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.048"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="@+id/imageView" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="340dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="280dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/ic_series_title"
                android:fontFamily="@font/montserrat_bold"
                android:textSize="24sp"/>

            <ImageButton
                android:id="@+id/fav_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:src="@drawable/fav_blackwhite" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="340dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/ic_event_name"
                android:textAlignment="center"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/indycar" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/upc"
                    android:textAlignment="center"
                    android:textSize="24sp" />
                <!--Timing 2-->
                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/ic_timing2"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@drawable/layout_border"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/ic_session2"
                    android:textSize="15sp" />

                <!--Timing 2-->
                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/ic_timing3"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@drawable/layout_border"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/ic_session3"
                    android:textSize="15sp" />

                <!--Timing 2-->
                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/ic_timing4"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@drawable/layout_border"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/ic_session4"
                    android:textSize="15sp" />

                <!--Timing 2-->
                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/ic_timing6"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@drawable/layout_border"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/ic_session6"
                    android:textSize="15sp" />

                <!--Timing 2-->
                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/ic_timing7"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@drawable/layout_border"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/ic_session7"
                    android:textSize="15sp" />

                <!--Timing 2-->
                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/ic_timing8"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@drawable/layout_border"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/ic_session8"
                    android:textSize="15sp" />

                <!--Timing 2-->
                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/ic_timing9"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@drawable/layout_border"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/ic_session9"
                    android:textSize="15sp" />

                <!--Timing 2-->
                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/ic_timing10"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@drawable/layout_border"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/ic_session10"
                    android:textSize="15sp" />

                <!--Timing 2-->
                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/ic_timing11"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@drawable/layout_border"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/ic_session11"
                    android:textSize="15sp" />

                <!--Timing 2-->
                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/ic_timing12"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@drawable/layout_border"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/ic_session12"
                    android:textSize="15sp" />

                <!--Timing 2-->
                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/ic_timing13"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView26"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@drawable/layout_border"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/ic_session13"
                    android:textSize="15sp" />
                
                

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>
</ScrollView>